--- a/assets/gui/css/alas.css
+++ b/assets/gui/css/alas.css
@@ -484,8 +484,11 @@ pre.rich-traceback-code {
     display: grid;
 }
 
-.bs-title-option,
+/* .bs-title-option,
 .form-check-input[id*="ch_S"] {
+    display: none;
+} */
+.bs-title-option{
     display: none;
 }
 
